--- a/style.css
+++ b/style.css
@@ -7,3 +7,10 @@
     font-size: normal;
     background-color: rgb(0, 255, 255);
 }
+h1{
+    font-size: 5vmax;
+}
+.container {
+    display: flex;
+    flex-direction: column;
+}
