--- a/style.css
+++ b/style.css
@@ -15,3 +15,7 @@ h1{
     display: flex;
     flex-direction: column;
 }
+.content-info{
+    display: grid;
+    grid-template-columns: 200px 200px 200px 200px;
+}
