--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 *{
     margin:0px;
     padding:0px;
-    font-family: 'madini one','sans-serif';
+    font-family: 'madimi one','sans-serif';
     margin: auto;
     font-size: normal;
     background-color: rgb(187, 222, 151);
