--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('html://fonts.googleapis.com/css2?family=Madimi+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Madimi+One&display=swap');
  
 *{
     margin:0px;
